# claude-code-router

./: pnpm-lock.yaml
rust_new/: .gitignore  Cargo.toml  README.md  RUST_RULES.md
rust_new/crates/ccr-cli/: Cargo.toml
rust_new/crates/ccr-cli/src/: lib.rs
rust_new/crates/ccr-config/: Cargo.toml
rust_new/crates/ccr-config/src/: error.rs  interpolate.rs  lib.rs  service.rs
rust_new/crates/ccr-core/: Cargo.toml
rust_new/crates/ccr-core/src/: error.rs  lib.rs  provider_registry.rs  router.rs  service.rs  types.rs
rust_new/crates/ccr-plugin-api/: Cargo.toml
rust_new/crates/ccr-plugin-api/src/: lib.rs
rust_new/crates/ccr-protocol/: Cargo.toml
rust_new/crates/ccr-protocol/src/: lib.rs  llm.rs  tokenizer.rs  transformer.rs
rust_new/crates/ccr-server/: Cargo.toml
rust_new/crates/ccr-server/src/: error.rs  handlers.rs  lib.rs  routes.rs  sse.rs  state.rs
rust_new/crates/ccr-shared/: Cargo.toml
rust_new/crates/ccr-shared/src/: constants.rs  error.rs  lib.rs
rust_new/crates/ccr-shared/src/preset/: export.rs  install.rs  marketplace.rs  merge.rs  mod.rs  read_preset.rs  sensitive_fields.rs  types.rs
rust_new/crates/ccr-shared/src/preset/schema/: apply.rs  conditions.rs  dependency.rs  mod.rs  options.rs  path_utils.rs
rust_new/crates/ccr-tokenizer/: Cargo.toml
rust_new/crates/ccr-tokenizer/src/: error.rs  lib.rs  service.rs
rust_new/crates/ccr-tokenizer/src/tokenizers/: api.rs  huggingface.rs  mod.rs  simple.rs
rust_new/crates/ccr-transform/: Cargo.toml
rust_new/crates/ccr-transform/src/: lib.rs
rust_new/docs/: architecture.md  compatibility-matrix.md  migration-phases.md
rust_new/fixtures/cli/: README.md
rust_new/fixtures/config/: basic.json5
rust_new/fixtures/presets/: sample-manifest.json
rust_new/fixtures/router/: README.md
rust_new/fixtures/sse/: README.md
