[workspace]
members = [
  "crates/ccr-shared",
  "crates/ccr-config",
  "crates/ccr-protocol",
  "crates/ccr-transform",
  "crates/ccr-tokenizer",
  "crates/ccr-core",
  "crates/ccr-server",
  "crates/ccr-cli",
  "crates/ccr-plugin-api",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"
authors = ["Claude Code Router Rust Migration"]

[workspace.dependencies]
async-trait = "0.1"
dirs = "6"
dotenvy = "0.15"
json5 = "0.4"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
zip = "2"
