[package]
name = "ccr-shared"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
dirs.workspace = true
json5.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true
