[package]
name = "ccr-transform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
ccr-protocol = { path = "../ccr-protocol" }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
